# robotics-assignment

./: .env  .gitignore  README.md  clean.sh  docker-compose.yml  info.txt  ros1-2.Dockerfile  ros1-3-catkin.Dockerfile  ros1-3.Dockerfile  ros1.Dockerfile  ros2-2.Dockerfile  ros2.Dockerfile
data-samples/: depth_image_rect_raw.txt  rgb_image_rect.txt
image-processing-test/: base64processingtest.py  depth_image_rect_raw.txt  depth_image_test.py  imageTest.py  main.py  main64.py  rgbImage.txt  rgb_image_rect.txt
master/: Dockerfile  redis.conf  requirements.txt
master/src/: VirtualBody.py  image-test.py  main.py  yolo.py
py_srvcli/: package.xml
py_srvcli_ros_1/: package.xml  py_srvcli.launch
py_srvcli_ros_1/py_srvcli/: client_member_function.py  listener.py
py_srvcli_ros_1/src/: listener.py
robot/: CMakeLists.txt  Dockerfile  init.sh  package.xml
robot/launch/: pub_sub_testing.launch
robot/src/: listener.py
robot/src/launch/: py_srvcli.launch
robot/src/src/: listener.py
ros1/: Dockerfile
ros1/src/: CMakeLists.txt  package.xml
ros1/src/launch/: py_srvcli.launch
ros1/src/src/: listener.py
ros2/: Dockerfile
ros2/src/: setup.py
yolov5tracker/: main.py  robotController.py  test.py  tracker.py  yolo.py
